<resources>
    <string name="app_name">Visaz</string>
    <string name="title_inspection_report">Visaz</string>
    <string name="inspection_report_name">S144 MAIN FRAME</string>
    <string name="hint_observation">Observation</string>
    <string name="label_submit">Submit</string>
    <string name="label_update">Update</string>
    <string name="label_cancel">Cancel</string>
    <string name="hint_remarks">Remarks</string>
    <string name="observation_dialog_description">Details: %1$s\n\nRequired: %2$s</string>
    <string name="label_login">Login</string>
    <string name="hint_password">Enter password</string>
    <string name="hint_username">Enter username</string>
    <string name="title_login">Login</string>
    <string name="label_login_header">Login here</string>
    <string name="label_home_header">This is home page. coming soon</string>
    <string name="back_to_exit_message">Please click BACK again to exit</string>
    <string name="label_home">Home</string>
    <string name="label_sign_up_header">Sign up here</string>
    <string name="hint_name">Enter your name</string>
    <string name="hint_email">Enter your email</string>
    <string name="hint_phone_number">Enter you phone number</string>
    <string name="label_sign_up">Sign Up</string>
    <string name="label_already_have_an_account">Already have an account? Login</string>
    <string name="label_do_not_have_an_account">Don\'t have an account? Sign Up</string>
    <string name="label_create_your_password">Create Your Password</string>
    <string name="hint_otp">Enter OTP</string>
    <string name="label_create_password">Create Password</string>
    <string name="error_password_mismatch">Password mismatch</string>
    <string name="hint_create_password">Create your password</string>
    <string name="hint_confirm_password">Confirm your password</string>
    <string name="error_password_empty">Password should not empty</string>
    <string name="welcome_user">Welcome %s !!!</string>
    <string name="label_logout">Logout</string>
    <string name="visaz_header_title">VISAZ - Your Gateway to Global Opportunities</string>
    <string name="label_visa_list_title">Countries</string>
    <string name="label_get_on">Get on %s</string>
    <string name="label_price">Price</string>
    <string name="travellers">Travellers</string>
    <string name="label_start_visa">Start Visa</string>
    <string name="label_visa_on">Visa on %s</string>
    <string name="label_visa_fee">Visa fee X %1$d</string>
    <string name="label_our_fee">Visas fee X %1$d</string>
    <string name="label_visa_price_note">You pay %s only when we deliver your visa on time</string>
    <string name="label_visa_info">%1$s is officially authorized by Government of %2$s</string>
    <string name="error_message_unauthorized">You are not authorized to access this resource. Please log in and try again.</string>
    <string name="google_login">Google Login</string>
    <string name="hint_selected_date">Selected date</string>
    <string name="hint_gender">Select Gender</string>
    <string name="hint_country">Country</string>
    <string name="label_application_form">Application Form</string>
    <string name="label_submit_application">Submit Application</string>
    <string name="label_upload_visa_required_images">Upload Visa Required Images</string>
    <string name="visa_basic_details_display">Date: %1$s\nMother Name: %2$s\nFather Name: %3$s\nGender: %4$s\nCountry: %5$s</string>
    <string name="label_documents_required">Documents required</string>
    <string name="label_profile_image">Profile Image</string>
    <string name="label_passport_image">Passport image</string>
    <string name="header_traveller">Traveller %1$d</string>
    <string name="visa_application_submitted_successfully">Visa application submitted successfully</string>
    <string name="error_visa_input">Please check all mandatory inputs</string>
    <string name="account_settings">Account settings</string>
    <string name="name">Name</string>
    <string name="website_url">Website URL</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="linkedin">Linkedin</string>
    <string name="youtube">Youtube</string>
    <string name="update">Update</string>
    <string name="hint_biography">Biography</string>
    <string name="phone_number">Phone number</string>
    <string name="label_profile">Profile</string>
    <string name="logout_message">Are you sure want to logout?</string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="title_profile">Profile</string>
    <string name="select_visa_type">Select visa type below</string>
    <string name="total_amount">Total amount</string>
    <string name="nationality">Nationality</string>
    <string name="travel_date">Travel Date</string>
    <string name="full_name_of_applicant">Full name of Applicant</string>
    <string name="contact_no">Contact no</string>
    <string name="email_id">Email id</string>
    <string name="hint_mother_name">Mother\'s name</string>
    <string name="hint_father_name">Father\'s name</string>
    <string name="current_residential_address">Current residential address</string>
    <string name="name_of_business">Name of Business</string>
    <string name="employer_address_of_business">Employer Address of Business</string>
    <string name="employer_designation">Employer Designation</string>
    <string name="pan_number">PAN number</string>
    <string-array name="marital_status">
        <item>Single</item>
        <item>Married</item>
        <item>Divorced</item>
        <item>Widowed</item>
    </string-array>
    <string name="husband_name">Husband\'s name</string>
    <string name="wife_name">Wife\'s name</string>
    <string name="occupation">Occupation</string>
    <string name="religion">Religion</string>
    <string name="education_qualification">Education qualification</string>
    <string name="main_language_spoken">Main language spoken</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="place_of_birth_country">Place of birth Country</string>
    <string name="passport_detail">Passport Detail</string>
    <string name="passport_number">Passport Number</string>
    <string name="purpose_of_visit">Purpose of visit</string>
    <string name="contact_in_country">Contact in %s</string>
    <string name="relationship_with_host">Relationship with host</string>
    <string name="address_or_hotel_confirmation">Address / Hotel Confirmation</string>
    <string name="voucher_area">Voucher Area</string>
    <string name="prefix_input_hint">Enter %s</string>
    <string name="prefix_dropdown_hint">Select %s</string>
    <string name="doc_profile_image">Profile image</string>
    <string name="doc_current_passport">Current passport</string>
    <string name="doc_current_passport_note1">Must be valid for at least 6 months at the time of application</string>
    <string name="doc_current_passport_note2">Coloured Photocopy of 1st 2 and last 2 pages of above passport</string>
    <string name="doc_photocopy_of_ticket">Photocopy of  Airline confirmed onward / return ticket</string>
    <string name="doc_photocopy_of_ticket_note1">Photo should be coloured &amp; clear, size 4.3 cms x 5.5 cms. AS REQUIRED TO CONFIRM PROOF OF ELIGIBILITY - Tick if enclosed Applicant Application Centre</string>
    <string name="upload_doc">Choose File</string>
    <string name="doc_previous_passport_exhibiting">Previous passport exhibiting previous travel</string>
    <string name="doc_long_term_fd">Banker’s certificate of long-term Fixed Deposits</string>
    <string name="doc_income_tax_returns">Income-tax returns for last 2 years and photocopy of PAN card</string>
    <string name="doc_letter_of_invitation">Letter of invitation from Dubai based close family member, along with photocopy of Passport, resident visa and proof of relationship</string>
    <string name="label_india">India</string>
    <string name="label_yes">Yes</string>
    <string name="label_no">No</string>
    <string name="date_format">dd-mm-yyyy</string>
    <string name="title_gender">Gender</string>
    <string name="hint_select_date">Select Date</string>
    <string name="label_business_details">Business Details</string>
    <string name="label_traveller_details">Traveller Details</string>
    <string name="hint_travel_date">Travel date</string>
    <string name="select_travel_date">Select Travel Date</string>
    <string name="national_id">National Id</string>
    <string name="aadhaar_number">Aadhaar Number</string>
    <string name="error_empty_travel_date">Please select travel date</string>
    <string name="error_empty_gender">Please select gender</string>
    <string name="error_empty_marital_status">Please select material status</string>
    <string name="error_empty_husband_name">Please enter name</string>
    <string name="error_empty_mother_name">Please enter mother\'s name</string>
    <string name="error_empty_father_name">Please enter father\'s name</string>
    <string name="error_empty_current_residential_address">Please enter current residential address</string>
    <string name="error_empty_name_of_business">Please enter name of the business</string>
    <string name="error_empty_address_of_business">Please enter business\'s address</string>
    <string name="error_empty_employer_designation">Please enter designation</string>
    <string name="error_empty_occupation">Please select occupation</string>
    <string name="error_empty_religion">Please select religion</string>
    <string name="error_empty_education_qualification">Please select educational qualification</string>
    <string name="error_empty_main_language_spoken">Please select main spoken language</string>
    <string name="error_empty_dob">Please select date of birth</string>
    <string name="error_empty_purpose_of_visit">Please enter purpose of visit</string>
    <string name="error_empty_country_contact_name">Please enter contact person name</string>
    <string name="error_empty_relationship_with_host">Please enter relationship with host</string>
    <string name="error_empty_address_or_hotel_confirmation">Please enter address</string>
    <string name="error_empty_voucher_area">Please enter voucher area</string>
    <string name="label_profile_image_upload">Click here to upload profile image</string>
    <string name="label_passport_image_upload">Click here to upload passport image</string>
    <string name="error_previous_passport_image">Please upload your previous passport doc image</string>
    <string name="error_long_term_fd">Please upload long term FD doc image</string>
    <string name="error_income_tax_returns">Please upload income tax return doc image</string>
    <string name="error_letter_of_invitation">Please upload letter of invitation doc image</string>
    <string name="search_country">Search country</string>
    <string name="doc_traveler_photo">Traveler Photo %d</string>
    <string name="doc_passport_front">Front Passport Traveler %d</string>
    <string name="doc_passport_back">Back Passport Traveler %d</string>
    <string name="doc_pan_card">India PAN Card Traveler %d</string>
    <string name="doc_round_trip_flight_ticket">Round Trip Flight Ticket Traveler %d</string>
    <string name="doc_hotel_booking">Hotel Booking Traveler %d</string>
    <string name="error_doc_traveler_photo">Please upload traveler photo</string>
    <string name="error_doc_passport_front">Please upload passport front document</string>
    <string name="error_doc_passport_back">Please upload passport back document</string>
    <string name="error_doc_pan_card">Please upload pan card document</string>
    <string name="error_doc_round_trip_flight_ticket">Please upload round trip flight ticket document</string>
    <string name="error_doc_hotel_booking">Please upload hotel booking document</string>
</resources>