<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:layout_margin="@dimen/spaceMedium"
    android:padding="@dimen/spaceSmall"
    android:background="@drawable/bg_doc_image_upload"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvOptionHeader"
        style="?textAppearanceBody1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/app_name" />

    <RadioGroup
        android:id="@+id/rgOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbYes"
            style="?textAppearanceBody1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_yes" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbNo"
            style="?textAppearanceBody1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spaceMedium"
            android:checked="true"
            android:text="@string/label_no" />
    </RadioGroup>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clDocContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDocHeader"
            style="?textAppearanceBody2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spaceMedium"
            android:text="@string/upload_doc"
            app:layout_constraintBottom_toBottomOf="@+id/ivDocImage"
            app:layout_constraintEnd_toStartOf="@+id/ivDocImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ivDocImage" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivDocImage"
            style="?textAppearanceBody1"
            android:layout_width="@dimen/doc_image_size"
            android:layout_height="@dimen/doc_image_size"
            android:layout_margin="@dimen/spaceMedium"
            android:contentDescription="@string/label_passport_image"
            android:src="@drawable/ic_image_placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>