<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.InspectionFragment">

    <include
        android:id="@+id/layoutHeader"
        layout="@layout/include_header_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btnSubmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutHeader">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvVisaBasicDetails"
                style="?textAppearanceBody1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/spaceMedium"
                android:text="@string/label_upload_visa_required_images"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnProfileImageUpload"
                style="@style/PrimaryButton"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="@dimen/spaceMedium"
                android:layout_marginTop="@dimen/spaceMedium"
                android:text="@string/label_profile_image_upload"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvVisaBasicDetails" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivProfilePreview"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginHorizontal="@dimen/spaceMedium"
                android:layout_marginTop="@dimen/spaceMedium"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvVisaBasicDetails"
                tools:src="@drawable/image1"
                tools:visibility="visible" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnPassportImageUpload"
                style="@style/PrimaryButton"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="@dimen/spaceMedium"
                android:layout_marginTop="@dimen/spaceMedium"
                android:text="@string/label_passport_image_upload"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivProfilePreview" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivPassportPreview"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginHorizontal="@dimen/spaceMedium"
                android:layout_marginTop="@dimen/spaceMedium"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnPassportImageUpload"
                tools:src="@drawable/image1"
                tools:visibility="visible" />


        </LinearLayout>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSubmit"
        style="@style/PrimaryButton"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/spaceMedium"
        android:text="@string/label_submit_application"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>